Pop up YouTube video player

--- a/index.html
+++ b/index.html
@@ -386,23 +386,12 @@
               are never on the same day on Gregorian calendars.
             </p>
             <div class="proj-desc"><a href="/privacy">Privacy Policy</a></div>
-            <button
-              class="btn"
-              onclick=" window.open('https://github.com/johnnyj2608/LunarBirthdays','_blank')"
-            >
-              GitHub
+            <button class="btn"
+              onclick=" window.open('https://github.com/johnnyj2608/LunarBirthdays','_blank')">GitHub
             </button>
-            <button
-              class="btn"
-              onclick=" window.open('https://apps.apple.com/us/app/lunar-birthdays/id6468920519','_blank')"
-            >
-              Demo
-            </button>
-            <button
-              class="btn"
-              onclick=" window.open('https://apps.apple.com/us/app/lunar-birthdays/id6468920519','_blank')"
-            >
-              App Store
+            <button class="btn play-video" data-video-id="">Demo</button>
+            <button class="btn"
+              onclick=" window.open('https://apps.apple.com/us/app/lunar-birthdays/id6468920519','_blank')">App Store
             </button>
           </div>
         </div>
@@ -425,13 +414,10 @@
               record the total value. This program has increased efficiency 
               of submitting claims by 80% for 400 clients biweekly.
             </p>
-            <button
-              class="btn"
-              onclick=" window.open('https://github.com/johnnyj2608/Claimbot','_blank')"
-            >
-              GitHub
+            <button class="btn"
+              onclick=" window.open('https://github.com/johnnyj2608/Claimbot','_blank')">GitHub
             </button>
-            <button class="btn" onclick="confirmDownload('assets/claimBot.exe', 'claimBot.exe')">Demo</button>
+            <button class="btn play-video" data-video-id="">Demo</button>
           </div>
         </div>
         <br />
@@ -451,13 +437,80 @@
               time-savings by constructing this script. Timesheets
               are curated based on service days, month, and year.
             </p>
-            <button
-              class="btn"
-              onclick=" window.open('https://github.com/johnnyj2608/Timesheet','_blank')"
-            >
-              GitHub
+            <button class="btn"
+              onclick=" window.open('https://github.com/johnnyj2608/Timesheet','_blank')">GitHub
             </button>
-            <button class="btn" onclick="confirmDownload('assets/updateTimesheets.exe', 'updateTimesheets.exe')">Demo</button>
+            <button class="btn play-video" data-video-id="">Demo</button>
+          </div>
+        </div>
+        <br />
+        <br />
+        <!--Loot Council-->
+        <div class="row text-left align-items-center">
+          <div class="col-xs-12 col-lg-6 proj-img">
+            <img class="img-fluid" src="assets/images/lootcouncil.jpg" alt="" />
+          </div>
+          <div class="col-xs-12 col-lg-6">
+            <div class="proj-title">Loot Council</div>
+            <div class="proj-desc">Web Scraper & Reward Allocator</div>
+            <p>
+              Developed a Python script to construct reward assignments for
+              World of Warcraft guilds. It utilizes web scraping techniques and
+              GraphQL to extract data to be used in the criterion. Environment
+              variables are used to safeguard API keys. GitHub Actions will
+              automatically run the script once a week.
+            </p>
+            <button class="btn"
+              onclick=" window.open('https://github.com/johnnyj2608/LootCouncil','_blank')">GitHub
+            </button>
+            <button class="btn play-video" data-video-id="">Demo</button>
+          </div>
+        </div>
+        <br />
+        <br />
+        <!--Restaurant POS-->
+        <div class="row text-left align-items-center">
+          <div class="col-xs-12 col-lg-6 proj-img">
+            <img class="img-fluid" src="assets/images/newgarden.jpg" alt="" />
+          </div>
+          <div class="col-xs-12 col-lg-6">
+            <div class="proj-title">Restaurant POS</div>
+            <div class="proj-desc">Point-of-Sale System</div>
+            <p>
+              Created a Java Swing GUI, Point-of-Sale system that allows
+              self-service for food ordering during the pandemic. It deploys
+              PostgreSQL to store every menu item and dynamically retrieves the
+              correct items based on the selected category. It also counts the
+              frequency of each item so restocking is easier.
+            </p>
+            <button class="btn"
+              onclick=" window.open('https://github.com/johnnyj2608/RestaurantPOS','_blank')">GitHub
+            </button>
+            <button class="btn play-video" data-video-id="">Demo</button>
+          </div>
+        </div>
+        <br />
+        <br />
+        <!--Romantic Hut-->
+        <div class="row text-left align-items-center">
+          <div class="col-xs-12 col-lg-6 proj-img">
+            <img class="img-fluid" src="assets/images/romantichut.jpg" alt="" />
+          </div>
+          <div class="col-xs-12 col-lg-6">
+            <div class="proj-title">Romantic Hut</div>
+            <div class="proj-desc">Local Business Website</div>
+            <p>
+              Designed a Bootstrap website to showcase the services of a party
+              hall. By filling out the embedded Google Form, you can receive an
+              immediate response on the venue's availability via Twilio. When
+              submitted, Apps Script will look for schedule conflicts in the
+              Google Sheet that hold all the reservations.
+            </p>
+            <button class="btn"
+              onclick=" window.open('https://github.com/johnnyj2608/RomanticHut','_blank')">GitHub
+            </button>
+            <button class="btn"
+              onclick=" window.open('https://www.romantichutparty.com/','_blank')">Demo</button>
           </div>
         </div>
         <br />
@@ -481,96 +534,16 @@
               paperwork to be saved and done digitally. Invitation-based
               onboarding where one account can only be affiliated with one SADC.
             </p>
-            <button
-              class="btn"
-              onclick=" window.open('https://github.com/johnnyj2608/SeniorConnect','_blank')"
-            >
-              GitHub
+            <button class="btn"
+              onclick=" window.open('https://github.com/johnnyj2608/SeniorConnect','_blank')">GitHub
             </button>
           </div>
         </div>
-        <br />
-        <br />
-        <!--Romantic Hut-->
-        <div class="row text-left align-items-center">
-          <div class="col-xs-12 col-lg-6 proj-img">
-            <img class="img-fluid" src="assets/images/romantichut.jpg" alt="" />
-          </div>
-          <div class="col-xs-12 col-lg-6">
-            <div class="proj-title">Romantic Hut</div>
-            <div class="proj-desc">Local Business Website</div>
-            <p>
-              Designed a Bootstrap website to showcase the services of a party
-              hall. By filling out the embedded Google Form, you can receive an
-              immediate response on the venue's availability via Twilio. When
-              submitted, Apps Script will look for schedule conflicts in the
-              Google Sheet that hold all the reservations.
-            </p>
-            <button
-              class="btn"
-              onclick=" window.open('https://github.com/johnnyj2608/RomanticHut','_blank')"
-            >
-              GitHub
-            </button>
-            <button
-              class="btn"
-              onclick=" window.open('https://www.romantichutparty.com/','_blank')"
-            >
-              Demo
-            </button>
-          </div>
-        </div>
-        <br />
-        <br />
-        <!--Restaurant POS-->
-        <div class="row text-left align-items-center">
-          <div class="col-xs-12 col-lg-6 proj-img">
-            <img class="img-fluid" src="assets/images/newgarden.jpg" alt="" />
-          </div>
-          <div class="col-xs-12 col-lg-6">
-            <div class="proj-title">Restaurant POS</div>
-            <div class="proj-desc">Point-of-Sale System</div>
-            <p>
-              Created a Java Swing GUI, Point-of-Sale system that allows
-              self-service for food ordering during the pandemic. It deploys
-              PostgreSQL to store every menu item and dynamically retrieves the
-              correct items based on the selected category. It also counts the
-              frequency of each item so restocking is easier.
-            </p>
-            <button
-              class="btn"
-              onclick=" window.open('https://github.com/johnnyj2608/RestaurantPOS','_blank')"
-            >
-              GitHub
-            </button>
-            <button class="btn" onclick="confirmDownload('assets/NewGardenProject.jar', 'NewGardenProject.jar')">Demo</button>
-          </div>
-        </div>
-        <br />
-        <br />
-        <!--Loot Council-->
-        <div class="row text-left align-items-center">
-          <div class="col-xs-12 col-lg-6 proj-img">
-            <img class="img-fluid" src="assets/images/lootcouncil.jpg" alt="" />
-          </div>
-          <div class="col-xs-12 col-lg-6">
-            <div class="proj-title">Loot Council</div>
-            <div class="proj-desc">Web Scraper & Reward Allocator</div>
-            <p>
-              Developed a Python script to construct reward assignments for
-              World of Warcraft guilds. It utilizes web scraping techniques and
-              GraphQL to extract data to be used in the criterion. Environment
-              variables are used to safeguard API keys. GitHub Actions will
-              automatically run the script once a week.
-            </p>
-            <button
-              class="btn"
-              onclick=" window.open('https://github.com/johnnyj2608/LootCouncil','_blank')"
-            >
-              GitHub
-            </button>
-          </div>
-        </div>
+      </div>
+      <!--Popup Video-->
+      <div class="popup-video">
+        <span>&times;</span>
+        <iframe src="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
     </section>
 
