Added YT URL for Project Demos

--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
             <button class="btn"
               onclick=" window.open('https://github.com/johnnyj2608/LunarBirthdays','_blank')">GitHub
             </button>
-            <button class="btn play-video" data-video-id="">Demo</button>
+            <button class="btn play-video" data-video-id="yANz3VMv6_s">Demo</button>
             <button class="btn"
               onclick=" window.open('https://apps.apple.com/us/app/lunar-birthdays/id6468920519','_blank')">App Store
             </button>
@@ -417,7 +417,7 @@
             <button class="btn"
               onclick=" window.open('https://github.com/johnnyj2608/Claimbot','_blank')">GitHub
             </button>
-            <button class="btn play-video" data-video-id="">Demo</button>
+            <button class="btn play-video" data-video-id="brIQREjXWPU">Demo</button>
           </div>
         </div>
         <br />
@@ -440,7 +440,7 @@
             <button class="btn"
               onclick=" window.open('https://github.com/johnnyj2608/Timesheet','_blank')">GitHub
             </button>
-            <button class="btn play-video" data-video-id="">Demo</button>
+            <button class="btn play-video" data-video-id="gG6fge2UY2Y">Demo</button>
           </div>
         </div>
         <br />
@@ -486,7 +486,7 @@
             <button class="btn"
               onclick=" window.open('https://github.com/johnnyj2608/RestaurantPOS','_blank')">GitHub
             </button>
-            <button class="btn play-video" data-video-id="">Demo</button>
+            <button class="btn play-video" data-video-id="aZanP8LEd20">Demo</button>
           </div>
         </div>
         <br />
