Updated with Loot Council project demo

--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
             <button class="btn"
               onclick=" window.open('https://github.com/johnnyj2608/LootCouncil','_blank')">GitHub
             </button>
-            <button class="btn play-video" data-video-id="">Demo</button>
+            <button class="btn play-video" data-video-id="STeGI4txP7M">Demo</button>
           </div>
         </div>
         <br />
