--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
             <button class="btn"
               onclick=" window.open('https://github.com/johnnyj2608/Timesheet','_blank')">GitHub
             </button>
-            <button class="btn play-video" data-video-id="gG6fge2UY2Y">Demo</button>
+            <button class="btn play-video" data-video-id="qL-lIXtQlJQ">Demo</button>
           </div>
         </div>
         <br />
