--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
             <button class="btn"
               onclick=" window.open('https://github.com/johnnyj2608/Claimbot','_blank')">GitHub
             </button>
-            <button class="btn play-video" data-video-id="brIQREjXWPU">Demo</button>
+            <button class="btn play-video" data-video-id="kw0KtUPqezA">Demo</button>
           </div>
         </div>
         <br />
