Removed tentative project

--- a/index.html
+++ b/index.html
@@ -228,15 +228,15 @@
                     <strong>An Kang Social Day Care</strong> |
                     <em>Software Engineer</em>
                   </h4>
-                  <p>- Saved 45 hours monthly by developing a Python script to 
-                    automate individualized timesheet creation in Excel
-                    <br>- Used Selenium to automate insurance claim submissions, 
+                  <p>
+                    - Saved 45 hours monthly by developing a Python script to
+                    automate individualized timesheet creation in Excel <br />-
+                    Used Selenium to automate insurance claim submissions,
                     increasing efficiency by 80% for 400 clients biweekly
-                    <br>- Designed a responsive Bootstrap website to showcase 
+                    <br />- Designed a responsive Bootstrap website to showcase
                     services offered, attracting 1,600 visitors per month
-                    <br>- Automated replies for online inquiries regarding 
+                    <br />- Automated replies for online inquiries regarding
                     on-site tour availability using Twilio API and Apps Script
-
                   </p>
                 </div>
               </li>
@@ -251,12 +251,14 @@
                     <strong>Siemens Digital Industries Software</strong> |
                     <em>Software Engineer Intern</em>
                   </h4>
-                  <p>- Applied k-means clustering on population density data 
-                    of 300k to locate optimal stops for a mobile health clinic
-                    <br>- Leveraged Anadonda’s debugger and virtual environment 
-                    to resolve 2 legacy codebases with outdated libraries
-                    <br>- Employed OpenAI API to generate training data of block 
-                    descriptions containing up to 3 features per sentence
+                  <p>
+                    - Applied k-means clustering on population density data of
+                    300k to locate optimal stops for a mobile health clinic
+                    <br />- Leveraged Anadonda’s debugger and virtual
+                    environment to resolve 2 legacy codebases with outdated
+                    libraries <br />- Employed OpenAI API to generate training
+                    data of block descriptions containing up to 3 features per
+                    sentence
                   </p>
                   <br />
                   <img
@@ -282,9 +284,11 @@
                 <div class="exp-icon"></div>
                 <div class="exp-card">
                   <h4><strong>The Pennsylvania State University</strong></h4>
-                  <p>- Bachelor of Science in Computer Science 
-                    <br />- 2019 Hackathon JPMorgan Sponsored Challenge Winner (900+ participants) 
-                    <br />- Leonhard Center Speaking Contest semi-finalist (Top 3%)
+                  <p>
+                    - Bachelor of Science in Computer Science <br />- 2019
+                    Hackathon JPMorgan Sponsored Challenge Winner (900+
+                    participants) <br />- Leonhard Center Speaking Contest
+                    semi-finalist (Top 3%)
                   </p>
                   <br />
                   <img class="img-fluid" src="assets/images/grad.jpg" alt="" />
@@ -316,9 +320,9 @@
                     <em>Head Mentor</em>
                   </h4>
                   <p>
-                    Provided mentorship to 8 first-year engineering students
-                    per semester. Also contributed to the orientation events
-                    and material
+                    Provided mentorship to 8 first-year engineering students per
+                    semester. Also contributed to the orientation events and
+                    material
                   </p>
                   <br />
                   <img class="img-fluid" src="assets/images/.jpg" alt="" />
@@ -386,12 +390,20 @@
               are never on the same day on Gregorian calendars.
             </p>
             <div class="proj-desc"><a href="/privacy">Privacy Policy</a></div>
-            <button class="btn"
-              onclick=" window.open('https://github.com/johnnyj2608/LunarBirthdays','_blank')">GitHub
+            <button
+              class="btn"
+              onclick=" window.open('https://github.com/johnnyj2608/LunarBirthdays','_blank')"
+            >
+              GitHub
             </button>
-            <button class="btn play-video" data-video-id="yANz3VMv6_s">Demo</button>
-            <button class="btn"
-              onclick=" window.open('https://apps.apple.com/us/app/lunar-birthdays/id6468920519','_blank')">App Store
+            <button class="btn play-video" data-video-id="yANz3VMv6_s">
+              Demo
+            </button>
+            <button
+              class="btn"
+              onclick=" window.open('https://apps.apple.com/us/app/lunar-birthdays/id6468920519','_blank')"
+            >
+              App Store
             </button>
           </div>
         </div>
@@ -407,17 +419,22 @@
             <div class="proj-desc">Automate Insurance Claim Submission</div>
             <p>
               Developed a Python script with CTkinter and Selenium to automate
-              submitting health insurance claims on Office Ally. It uses an 
+              submitting health insurance claims on Office Ally. It uses an
               Excel template to pull account and member information to autofill
-              claim forms. By selecting which member list and range of dates,
-              it will automatically submit and download each claim and 
-              record the total value. This program has increased efficiency 
-              of submitting claims by 80% for 400 clients biweekly.
+              claim forms. By selecting which member list and range of dates, it
+              will automatically submit and download each claim and record the
+              total value. This program has increased efficiency of submitting
+              claims by 80% for 400 clients biweekly.
             </p>
-            <button class="btn"
-              onclick=" window.open('https://github.com/johnnyj2608/Claimbot','_blank')">GitHub
+            <button
+              class="btn"
+              onclick=" window.open('https://github.com/johnnyj2608/Claimbot','_blank')"
+            >
+              GitHub
             </button>
-            <button class="btn play-video" data-video-id="kw0KtUPqezA">Demo</button>
+            <button class="btn play-video" data-video-id="kw0KtUPqezA">
+              Demo
+            </button>
           </div>
         </div>
         <br />
@@ -432,15 +449,20 @@
             <div class="proj-desc">Excel Modification Automation</div>
             <p>
               Developed a Python script with a GUI to automate the timesheet
-              creation process. For the start of every new month, over 500 
-              unique timesheets are neededed. Achieved 40 hours of monthly 
-              time-savings by constructing this script. Timesheets
-              are curated based on service days, month, and year.
+              creation process. For the start of every new month, over 500
+              unique timesheets are neededed. Achieved 40 hours of monthly
+              time-savings by constructing this script. Timesheets are curated
+              based on service days, month, and year.
             </p>
-            <button class="btn"
-              onclick=" window.open('https://github.com/johnnyj2608/Timesheet','_blank')">GitHub
+            <button
+              class="btn"
+              onclick=" window.open('https://github.com/johnnyj2608/Timesheet','_blank')"
+            >
+              GitHub
             </button>
-            <button class="btn play-video" data-video-id="qL-lIXtQlJQ">Demo</button>
+            <button class="btn play-video" data-video-id="qL-lIXtQlJQ">
+              Demo
+            </button>
           </div>
         </div>
         <br />
@@ -460,10 +482,15 @@
               variables are used to safeguard API keys. GitHub Actions will
               automatically run the script once a week.
             </p>
-            <button class="btn"
-              onclick=" window.open('https://github.com/johnnyj2608/LootCouncil','_blank')">GitHub
+            <button
+              class="btn"
+              onclick=" window.open('https://github.com/johnnyj2608/LootCouncil','_blank')"
+            >
+              GitHub
             </button>
-            <button class="btn play-video" data-video-id="STeGI4txP7M">Demo</button>
+            <button class="btn play-video" data-video-id="STeGI4txP7M">
+              Demo
+            </button>
           </div>
         </div>
         <br />
@@ -483,10 +510,15 @@
               correct items based on the selected category. It also counts the
               frequency of each item so restocking is easier.
             </p>
-            <button class="btn"
-              onclick=" window.open('https://github.com/johnnyj2608/RestaurantPOS','_blank')">GitHub
+            <button
+              class="btn"
+              onclick=" window.open('https://github.com/johnnyj2608/RestaurantPOS','_blank')"
+            >
+              GitHub
             </button>
-            <button class="btn play-video" data-video-id="aZanP8LEd20">Demo</button>
+            <button class="btn play-video" data-video-id="aZanP8LEd20">
+              Demo
+            </button>
           </div>
         </div>
         <br />
@@ -506,36 +538,17 @@
               submitted, Apps Script will look for schedule conflicts in the
               Google Sheet that hold all the reservations.
             </p>
-            <button class="btn"
-              onclick=" window.open('https://github.com/johnnyj2608/RomanticHut','_blank')">GitHub
+            <button
+              class="btn"
+              onclick=" window.open('https://github.com/johnnyj2608/RomanticHut','_blank')"
+            >
+              GitHub
             </button>
-            <button class="btn"
-              onclick=" window.open('https://www.romantichutparty.com/','_blank')">Demo</button>
-          </div>
-        </div>
-        <br />
-        <br />
-        <!--Senior Connect-->
-        <div class="row text-left align-items-center">
-          <div class="col-xs-12 col-lg-6 proj-img">
-            <img
-              class="img-fluid"
-              src="assets/images/seniorconnect.png"
-              alt=""
-            />
-          </div>
-          <div class="col-xs-12 col-lg-6">
-            <div class="proj-title">Senior Connect</div>
-            <div class="proj-desc">SADC Management App</div>
-            <p>
-              Created a SwiftUI iOS app with Firebase integration to
-              facilitate communication between social adult day care members
-              and staff. Also supports user management for the staff, allowing
-              paperwork to be saved and done digitally. Invitation-based
-              onboarding where one account can only be affiliated with one SADC.
-            </p>
-            <button class="btn"
-              onclick=" window.open('https://github.com/johnnyj2608/SeniorConnect','_blank')">GitHub
+            <button
+              class="btn"
+              onclick=" window.open('https://www.romantichutparty.com/','_blank')"
+            >
+              Demo
             </button>
           </div>
         </div>
@@ -543,7 +556,12 @@
       <!--Popup Video-->
       <div class="popup-video">
         <span>&times;</span>
-        <iframe src="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe
+          src=""
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen
+        ></iframe>
       </div>
     </section>
 
