--- a/index.html
+++ b/index.html
@@ -229,14 +229,17 @@
                     <em>Software Engineer</em>
                   </h4>
                   <p>
-                    - Saved 45 hours monthly by developing a Python script to
-                    automate individualized timesheet creation in Excel <br />-
-                    Used Selenium to automate insurance claim submissions,
-                    increasing efficiency by 80% for 400 clients biweekly
-                    <br />- Designed a responsive Bootstrap website to showcase
-                    services offered, attracting 1,600 visitors per month
-                    <br />- Automated replies for online inquiries regarding
-                    on-site tour availability using Twilio API and Apps Script
+                    - Achieved 90% efficiency gains in insurance claim submissions for 500 patients biweekly, saving the billing
+                    department 85 hours per cycle by employing Python Selenium and Pandas for patient data mapping                    
+                    <br /><br />
+                    - Reduced the administration team’s workload by 45 hours every month by utilizing Python Xlwings to automate
+the creation and printing of 500 individualized Excel timesheets
+                    <br /><br />
+                    - Enabled self-service food ordering for 200 daily patients by creating a Bootstrap website with Google Forms
+                    and Apps Script to dynamically update menu choices, saving the kitchen staff 30 minutes each day                    
+                    <br /><br />
+                    - Reduced tour availability inquiries by 10% with Apps Script triggered by Google Form submissions that
+                    cross-reference reservation dates in Sheets and send an automated reply through Twilio SMS
                   </p>
                 </div>
               </li>
@@ -252,11 +255,14 @@
                     <em>Software Engineer Intern</em>
                   </h4>
                   <p>
-                    - Applied k-means clustering on population density data of
-                    300k to locate optimal stops for a mobile health clinic
-                    <br />- Leveraged Anadonda’s debugger and virtual
+                    - Retrieved regional population density data of 300k via Socrata API, pre-processed with Pandas, and applied
+                    k-means clustering to identify mobile vaccination clinic locations
+                    <br /><br />
+                    - Leveraged Anadonda’s debugger and virtual
                     environment to resolve 2 legacy codebases with outdated
-                    libraries <br />- Employed OpenAI API to generate training
+                    libraries 
+                    <br /><br />
+                    - Employed OpenAI API to generate training
                     data of block descriptions containing up to 3 features per
                     sentence
                   </p>
@@ -285,9 +291,12 @@
                 <div class="exp-card">
                   <h4><strong>The Pennsylvania State University</strong></h4>
                   <p>
-                    - Bachelor of Science in Computer Science <br />- 2019
-                    Hackathon JPMorgan Sponsored Challenge Winner (900+
-                    participants) <br />- Leonhard Center Speaking Contest
+                    - Bachelor of Science in Computer Science 
+                    <br /><br />
+                    - 2019 Hackathon JPMorgan Sponsored Challenge Winner (900+
+                    participants) 
+                    <br /><br />
+                    - Leonhard Center Speaking Contest
                     semi-finalist (Top 3%)
                   </p>
                   <br />
