--- a/index.html
+++ b/index.html
@@ -235,8 +235,8 @@
                     - Reduced the administration team’s workload by 45 hours every month by utilizing Python Xlwings to automate
 the creation and printing of 500 individualized Excel timesheets
                     <br /><br />
-                    - Enabled self-service food ordering for 200 daily patients by creating a Bootstrap website with Google Forms
-                    and Apps Script to dynamically update menu choices, saving the kitchen staff 30 minutes each day                    
+                    - Implemented self-service food ordering for 200 patients and saved the kitchen staff 30 minutes each day by
+                    developing a Bootstrap website with GET and POST methods to Google Sheets                                        
                     <br /><br />
                     - Reduced tour availability inquiries by 10% with Apps Script triggered by Google Form submissions that
                     cross-reference reservation dates in Sheets and send an automated reply through Twilio SMS
