--- a/index.html
+++ b/index.html
@@ -233,10 +233,10 @@
                     department 85 hours per cycle by employing Python Selenium and Pandas for patient data mapping                    
                     <br /><br />
                     - Reduced the administration team’s workload by 45 hours every month by utilizing Python Xlwings to automate
-the creation and printing of 500 individualized Excel timesheets
+                    the creation and printing of 500 individualized Excel timesheets
                     <br /><br />
-                    - Implemented self-service food ordering for 200 patients and saved the kitchen staff 30 minutes each day by
-                    developing a Bootstrap website with GET and POST methods to Google Sheets                                        
+                    - Implemented self-service food ordering for 200 clients, saving the kitchen staff 30 minutes daily by developing
+                    a Bootstrap website that utilizes Google Sheets API and Node.js                               
                     <br /><br />
                     - Reduced tour availability inquiries by 10% with Apps Script triggered by Google Form submissions that
                     cross-reference reservation dates in Sheets and send an automated reply through Twilio SMS
