New project - order up

--- a/index.html
+++ b/index.html
@@ -448,6 +448,34 @@
         </div>
         <br />
         <br />
+        <!--Order Up-->
+        <div class="row text-left align-items-center">
+          <div class="col-xs-12 col-lg-6 proj-img">
+            <img class="img-fluid" src="assets/images/orderup.jpg" alt="" />
+          </div>
+          <div class="col-xs-12 col-lg-6">
+            <div class="proj-title">Order Up</div>
+            <div class="proj-desc">Remote Food Ordering</div>
+            <p>
+              Developed a full-stack web application with Node.js enables remote food ordering 
+              for social adult day cares, allowing kitchen staff to set daily menus 
+              and track orders effortlessly. It features self-ordering capabilities with 
+              schedule-aware menus managed by the staff. It saves the kitchen staff 30 minutes 
+              each day from manually asking every individual for their meal preference.
+            </p>
+            <button
+              class="btn"
+              onclick=" window.open('https://github.com/johnnyj2608/OrderUp','_blank')"
+            >
+              GitHub
+            </button>
+            <!-- <button class="btn play-video" data-video-id="">
+              Demo
+            </button> -->
+          </div>
+        </div>
+        <br />
+        <br />
         <!--Timesheet-->
         <div class="row text-left align-items-center">
           <div class="col-xs-12 col-lg-6 proj-img">
