Demo for Project: Order Up

--- a/index.html
+++ b/index.html
@@ -469,9 +469,9 @@
             >
               GitHub
             </button>
-            <!-- <button class="btn play-video" data-video-id="">
+            <button class="btn play-video" data-video-id="jfPqaO7GtPs">
               Demo
-            </button> -->
+            </button>
           </div>
         </div>
         <br />
